@@ -251,7 +251,7 @@ a.stats_link.missing span	{color:#008FFF;}
 .title_wrap				{width:960px; margin:0 auto; padding:0 0 40px 0; margin-bottom:40px;}
 .table_wrap				{background-color:rgba(0,14,32,0.7); padding:0; border-radius:8px 8px 0 0; position:relative; width:960px;}
 .table_wrap.main		{padding-bottom:0; border-radius:8px 8px 0 0;}
-.table_wrap.view		{width:920px; margin:0 auto; padding:20px; margin-bottom:40px;}
+.table_wrap.view		{width:960px; margin:0 auto; padding:5px; margin-bottom:40px; box-sizing:border:box;}
 
 
 /*	Data Description styles
@@ -415,7 +415,7 @@ ul.chosen-choices	{border-radius:6px;}
 
 /*	Table header styles
 	============================================= */
-th.titles					{color:#CCC; text-align:left; vertical-align:bottom; padding:15px 0 15px 20px; border-bottom:1px solid #333642;}
+th.titles					{color:#CCC; text-align:left; vertical-align:bottom; padding:15px 0 10px 20px; border-bottom:1px solid #333642;}
 th.titles:nth-child(1), th.titles:nth-child(3), th.titles:nth-child(4),
 th.titles:last-child		{padding:15px 20px 10px 20px; text-align:right; font-size:0.9em; line-height:1.25em;}
 th.titles:last-child		{min-width:120px; padding-left:20px;}
@@ -490,7 +490,7 @@ table.list a:active		{color:#A8C5E5; text-decoration:none;}
 /*	Table for Money list (Donors / Sectors)
 	============================================= */
 table.money					{width:100%; border-collapse:collapse; table-layout:fixed;}
-table.money td				{text-align:right; color:#B8C8CD; font-size:1.0em; line-height:1.45em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid rgb(13,26,49); padding:15px 10px;}
+table.money td				{text-align:right; color:#B8C8CD; font-size:1.0em; line-height:1.3em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid rgb(13,26,49); padding:15px 10px;}
 table.money td.col1			{text-align:left; background-color:rgba(74,82,54,0.4);}
 table.money td.col2			{text-align:left;}
 table.money td.col3			{background-color:rgba(17,46,105,0.2);}
@@ -499,7 +499,7 @@ table.money td.col5			{background-color:rgba(17,46,105,0.6);}
 table.money td.col6			{background-color:rgba(17,101,105,0.4);}
 table.money td.col7			{background-color:rgba(17,101,105,0.6);}
 
-table.money tr.row1 th		{background-color:transparent; color:#FFF; font-weight:700; text-align:center; padding:0px; position:relative;}
+table.money tr.row1 th		{background-color:transparent; color:#FFF; font-size:14px; font-weight:700; text-align:center; padding:0px; position:relative;}
 table.money tr.row1 th:hover{cursor:pointer;}
 table.money tr.row1 th span	{color:#FFF; display:block; padding:20px 10px;}
 table.money tr.row1 th.col2 span	{padding:20px 5px;}	/*	PUBLISHER table header	*/
@@ -535,7 +535,7 @@ table.money tr.row2 td.col1 span.sort	{position:absolute; right:10px; left:initi
 table.money tr.row2 td.col2 span.sort	{position:absolute; right:5px; left:initial; top:23px;}	/*	NAME table header	*/
 table.money tr.row2 td.col6.allocate span.sort	{left:0;}
 
-table.money a				{display:block; color:#FFF; word-wrap:normal;}
+table.money a				{display:block; color:#FFF; word-wrap:normal; word-break:break-word;}
 table.money a:focus			{color:#A8C5E5; text-decoration:none;}
 table.money a:link  		{color:#FFF; text-decoration:none;}
 table.money a:visited		{color:#FFF; text-decoration:none;}
@@ -546,6 +546,9 @@ table.money a.year.prev		{left:0;}
 table.money a.year.prev:hover	{background-color:#2F57A5;}
 table.money a.year.next		{right:0;}
 table.money a.year.next:hover	{background-color:#198286;}
+
+table.money th.col2			{width:180px;}
+table.money td.col2	a		{word-break:break-word;}
 
 table.money.publishers th.col2,
 table.money.publishers td.col2	{border-left:1px solid rgba(0,50,151,1);}
