@@ -106,6 +106,7 @@
 	{table_countries_crs_row_head}
 	{table_countries_crs_rows}
 	</table>
+	{table_alert}
 	<div class="download_wrap"><a download="dportal_countries.csv" href="{csv_data}" class="csv_download">{download_csv_text}</a></div>
 </div>
 
