@@ -1,3 +1,10 @@
+Development Portal (2018-08-21 shi)
+==============================
+Fix word-break in sector / donor tables for long names in columns
+Update sector/donor tables width and layout
+Update print-friendly css
+
+
 Development Portal (2018-08-16 shi)
 ==============================
 Dsiplay document-date for document-link in SAVi
